[tool.poetry]
name = "monitor"
version = "0.1.0"
description = ""
authors = ["Nik Cubrilovic <nc9@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7.8"
isort = "^4.3.21"
pylint = "^2.2"
rope = "^0.16.0"
twine = "^3.1.1"
ipython = "^7.15.0"
pytest = "^5.4.3"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
monitor = 'monitor.cli:main'

[tool.black]
line-length = 79
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
